# ml-engineer-test

./: README.md  pyproject.toml  requirements.txt
ml-engineer-test/: LICENSE  Makefile  README.md  airflow.cfg  pyproject.toml  setup.py  unittests.cfg
ml-engineer-test/dags/: train_dag.py
ml-engineer-test/docs/: Makefile  conf.py  index.rst  make.bat
ml-engineer-test/logs/scheduler/: latest
ml-engineer-test/mlruns/0/: meta.yaml
ml-engineer-test/mlruns/0/3077c1d73d9b4febb7ed44c7a807ad25/: meta.yaml
ml-engineer-test/mlruns/0/8942d89f26074dcab980d57ee4310ca0/: meta.yaml
ml-engineer-test/mlruns/0/8942d89f26074dcab980d57ee4310ca0/artifacts/model/: MLmodel  model.pkl
ml-engineer-test/mlruns/0/8942d89f26074dcab980d57ee4310ca0/metrics/: mae  r2  rmse
ml-engineer-test/mlruns/0/8942d89f26074dcab980d57ee4310ca0/tags/: mlflow.log-model.history  mlflow.source.git.commit
ml-engineer-test/mlruns/0/ad8d23f66782410db8ba2a0a92a4a76e/: meta.yaml
ml-engineer-test/mlruns/0/e47bcb4b947a4a6bbf8780a00b8d4bce/: meta.yaml
ml-engineer-test/mlruns/0/e47bcb4b947a4a6bbf8780a00b8d4bce/metrics/: mae  r2  rmse
ml-engineer-test/mlruns/0/e47bcb4b947a4a6bbf8780a00b8d4bce/tags/: mlflow.log-model.history  mlflow.source.git.commit  mlflow.source.name
ml-engineer-test/notebooks/: EDA.ipynb  QUICK_EDA.ipynb  data_exploration.ipynb
ml-engineer-test/tamales_inc/: pipeline.py
ml-engineer-test/tamales_inc/features/: create_feature_store.py
ml-engineer-test/tamales_inc/models/: custom_model.py  predictions.py  train_model.py  training_flow.py
tamales-sales-service/: main.py  script_1.py
(+8 files in other folders)
